--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
+  "bugs" : "https://github.com/suhasgavad/DemoNodeStack/issues", 
+  "email" : "project@hostname.com",
+  "config" : { 
+    "port" : "2020"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
